enable delete topic

--- a/kafka/configs/default/server.properties
+++ b/kafka/configs/default/server.properties
@@ -114,3 +114,8 @@ zookeeper.connect=%s:2181
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=6000
+
+############################# Zookeeper #############################
+# Custom settings for SAGA-Hadoop and HPC scenario
+
+delete.topic.enable=True
